# PIT-STOP

./: LICENSE  README.md
main_rpi/: Makefile  README.md  main_server.cpp
main_rpi/congestion_analysis/: README.md  congestion_analyzer.h
main_rpi/crowd_detection/: crowd_info.h
main_rpi/fall_detection/: README.md
main_rpi/pathfinding/: README.md  path_finder.cpp  path_finder.h
main_rpi/rendering/: README.md  renderer.h
main_rpi/speaker/: README.md  playback_worker.cpp  playback_worker.h  speaker.cpp  speaker.h  speaker_socket.cpp
model/: README.md  crowd.onnx  crowd.pt  crowd_model_export.ipynb  fall.onnx  fall.pt  fall_model_export.ipynb
package/: README.md
qt_client/: CMakeLists.txt  README.md  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  monitorwindow.cpp  monitorwindow.h  mqtt.cpp  mqtt.h  rtspclient.cpp  rtspclient.h  rtspclientcamera1.cpp  rtspclientcamera1.h  rtspclienttlsinteraction.cpp  rtspclienttlsinteraction.h  signupwindow.cpp  signupwindow.h
qt_client/microphone/: README.md  audio_settings.cpp  audio_settings.h  microphone.cpp  microphone.h  microphone_input.cpp  microphone_input.h  microphone_socket.cpp
sub_rpi/: Makefile  README.md  sub_server.cpp
sub_rpi/configuration/: README.md
sub_rpi/crowd_detection/: README.md  crowd_detector.h
test/: Makefile  README.md  config.h  congestion_analyzer.cpp  crowd_detector.cpp  fall_detector.cpp  fall_detector.h  fall_info.h  renderer.cpp  test_log.cpp  test_visual.cpp
test/microphone/: CMakeLists.txt  microphone_main.cpp  microphone_socket.h  microphone_widget.cpp  microphone_widget.h
test/speaker/: Makefile  audio_settings.cpp  audio_settings.h  speaker_main.cpp  speaker_socket.h
